# mpcs51052-course-project

./: README.md  pyproject.toml
docs/: M1.md  M2.md
hindsight/: __main__.py  analyze.py  data.py  models.py
tests/: test_analyze.py
