[project]
name = "fpl-hindsight-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "requests>=2.33.1",
]

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors - handles basic Python style
  "W", # pycodestyle warnings - handles whitespace issues
  "F", # pyflakes - handles unused imports and variables
  "N", # pep8-naming - handles naming conventions
]
