[project]
name = "hindsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hindsight*"]

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors - handles basic Python style
  "W", # pycodestyle warnings - handles whitespace issues
  "F", # pyflakes - handles unused imports and variables
  "N", # pep8-naming - handles naming conventions
]
